course completed + code cleanup

--- a/public/app/templates/books.html
+++ b/public/app/templates/books.html
@@ -1,3 +1,7 @@
+<div>
+    {{books.summaryData.bookCount}} Books - {{books.summaryData.bookCount}} Readers - {{books.summaryData.grandTotalMinutes}} Total Minutes Read
+</div>
+
 <h3>All Books</h3>
 <div>
     <ul>
@@ -9,7 +13,7 @@
 </div>
 
 <a href="#/AddBook">Add New Book</a>
-<a href="#/EditBook/{{books.lastEdited._id}}">Open Last Edited</a>
+<a href="#/EditBook/{{books.currentUser.lastBookEdited._id}}">Open Last Edited</a>
 
 <h3>All Readers</h3>
 <div>
