--- a/public/app/templates/books.html
+++ b/public/app/templates/books.html
@@ -1,19 +1,31 @@
-<div>
-    {{books.summaryData.bookCount}} Books - {{books.summaryData.bookCount}} Readers - {{books.summaryData.grandTotalMinutes}} Total Minutes Read
+<div class="summary pull-right">
+    {{books.summaryData.bookCount}} Books - {{books.summaryData.readerCount}} Readers - {{books.summaryData.grandTotalMinutes}} Total Minutes Read
 </div>
 
-<h3>All Books</h3>
-<div>
-    <ul>
-        <li ng-repeat="book in books.allBooks">{{book.title}} - {{book.author}}
-            <a href="#/EditBook/{{book._id}}">Edit</a>
-            <a href="" ng-click="books.deleteBook(book._id)">Delete</a>
-        </li>
-    </ul>
-</div>
+<div class="all_books">
+    <h3>
+        All Books&nbsp;
+        <a ui-sref="app.addBook" title="Add New Book"><i class="fa fa-plus-square" aria-hidden="true"></i></a>
+        <a ui-sref="app.editBook({bookID: books.currentUser.lastBookEdited._id})" title="Open Last Edited"><i class="fa fa-cog" aria-hidden="true"></i></a>
 
-<a href="#/AddBook">Add New Book</a>
-<a href="#/EditBook/{{books.currentUser.lastBookEdited._id}}">Open Last Edited</a>
+        <div class="pull-right">
+            <!--<i class="fa fa-search" aria-hidden="true"></i>-->
+            <input type="text" class="form-control" name="search" placeholder="Search.." ng-model="books.search">
+        </div>
+    </h3>
+</div>
+<div class="row">
+    <div class="col-md-2 book-listing boxInner" ng-repeat="book in books.allBooks | filter:books.search">
+        <div class="book-container book-list">
+            <img ng-src="{{books.thumbnail}}" height="250px" title="{{book.title}} Thumbnail" />
+        </div>
+
+        <h4 style="margin-top:19px;">{{book.title}} - <small class="">{{book.author}}</small></h4>
+
+        <a ui-sref="app.editBook({bookID: book._id})">Edit</a> |
+        <a href="" ng-click="books.deleteBook(book._id)">Delete</a>
+    </div>
+</div>
 
 <h3>All Readers</h3>
 <div>
