--- a/public/app/templates/editBook.html
+++ b/public/app/templates/editBook.html
@@ -1,28 +1,38 @@
-<h3>Edit Book</h3>
-
-<form class="form-horizontal" role="form">
-    <div class="form-group">
-        <label for="bookTitle" class="col-sm-1 control-label">Title</label>
-        <div class="col-sm-4">
-            <input ng-model="bookEditor.currentBook.title" type="text" class="form-control" id="bookTitle" placeholder="Title">
+<div class="container margin_60">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2 login-box">
+            <div class="text-center">
+                <h3>Edit Book</h3>
+            </div>
+            <div class="">&nbsp;</div>
+            <div class="">
+                <form class="form-horizontal" role="form">
+                    <div class="form-group">
+                        <label for="bookTitle" class="col-md-1 col-md-offset-1 control-label">Title</label>
+                        <div class="col-md-8">
+                            <input ng-model="bookEditor.currentBook.title" type="text" class="form-control" id="bookTitle" placeholder="Title">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="bookAuthor" class="col-md-1 col-md-offset-1 control-label">Author</label>
+                        <div class="col-md-8">
+                            <input ng-model="bookEditor.currentBook.author" type="text" class="form-control" id="bookAuthor" placeholder="Author">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="bookPublished" class="col-md-1 col-md-offset-1 control-label">Year</label>
+                        <div class="col-md-8">
+                            <input ng-model="bookEditor.currentBook.year_published" type="text" class="form-control" id="bookPublished" placeholder="Year Published">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-4">
+                            <button class="btn btn-default" ng-click="bookEditor.saveBook()">Save</button>
+                            <button class="btn btn-default" ng-click="bookEditor.setAsFavorite()">Set as Favorite</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-    <div class="form-group">
-        <label for="bookAuthor" class="col-sm-1 control-label">Author</label>
-        <div class="col-sm-4">
-            <input ng-model="bookEditor.currentBook.author" type="text" class="form-control" id="bookAuthor" placeholder="Author">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="bookPublished" class="col-sm-1 control-label">Year</label>
-        <div class="col-sm-4">
-            <input ng-model="bookEditor.currentBook.year_published" type="text" class="form-control" id="bookPublished" placeholder="Year Published">
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-offset-1 col-sm-5">
-            <button class="btn btn-default" ng-click="bookEditor.saveBook()">Save</button>
-            <button class="btn btn-default" ng-click="bookEditor.setAsFavorite()">Set as Favorite</button>
-        </div>
-    </div>
-</form>
+</div>
