--- a/public/src/templates/books.html
+++ b/public/src/templates/books.html
@@ -5,8 +5,8 @@
 <div class="all_books">
     <h3>
         All Books&nbsp;
-        <a ui-sref="app.addBook" title="Add New Book"><i class="fa fa-plus-square" aria-hidden="true"></i></a>
-        <a ui-sref="app.editBook({bookID: books.currentUser.lastBookEdited._id})" title="Open Last Edited"><i class="fa fa-cog" aria-hidden="true"></i></a>
+        <a ui-sref="app.addBook" title="Add New Book"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a>
+        <a ui-sref="app.editBook({bookID: books.currentUser.lastBookEdited._id})" title="Open Last Edited"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
 
         <div class="pull-right">
             <!--<i class="fa fa-search" aria-hidden="true"></i>-->
@@ -15,7 +15,7 @@
     </h3>
 </div>
 <div class="row">
-    <div class="col-md-2 book-listing boxInner" ng-repeat="book in books.allBooks | filter:books.search">
+    <div class="col-sm-3 col-md-2 book-listing boxInner" ng-repeat="book in books.allBooks | filter:books.search">
         <div class="book-container book-list">
             <img ng-src="{{books.thumbnail}}" height="250px" title="{{book.title}} Thumbnail" />
         </div>
