--- a/public/src/templates/books.html
+++ b/public/src/templates/books.html
@@ -15,7 +15,7 @@
     </h3>
 </div>
 <div class="row">
-    <div class="col-sm-3 col-md-2 book-listing boxInner" ng-repeat="book in books.allBooks | filter:books.search">
+    <div class="col-sm-3 col-md-2 book-listing boxInner" ng-repeat="book in books.loadedBooks | filter:books.search">
         <div class="book-container book-list">
             <img ng-src="{{books.thumbnail}}" height="250px" title="{{book.title}} Thumbnail" />
         </div>
@@ -26,6 +26,11 @@
         <a href="" ng-click="books.deleteBook(book._id)">Delete</a>
     </div>
 </div>
+<center style="margin-top: 20px;">
+    <div ng-show='books.loading.busy && !books.loading.complete'><img width="20px" src="http://intuitglobal.intuit.com/delivery/cms/prod/sites/default/intuit.ca/images/quickbooks-sui-images/loader.gif" /> Loading data...<br/><br/></div>
+    <div ng-show='books.loading.busy && books.loading.complete'><img width="20px" src="http://intuitglobal.intuit.com/delivery/cms/prod/sites/default/intuit.ca/images/quickbooks-sui-images/loader.gif" /> No more data...<br/><br/></div>
+    <div><button class="btn btn-default" ng-click="books.loadMoreData()">Load more...</button></div>
+</center>
 
 <h3>All Readers</h3>
 <div>
