--- a/public/src/templates/header.html
+++ b/public/src/templates/header.html
@@ -16,6 +16,9 @@
             <!-- Navbar -->
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
+                    <li><a ui-sref="app">Home</a></li>
+                    <li><a ui-sref="app.login">Login</a></li>
+                    <li><a ui-sref="app.register">Register</a></li>
                     <li class="dropdown" ng-if="loggedIn">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{username}} <span class="caret"></span></a>
                         <ul class="dropdown-menu">
