--- a/public/src/templates/register.html
+++ b/public/src/templates/register.html
@@ -1,23 +1,41 @@
 <div class="container margin_60">
     <div class="row">
-        <!-- Login box -->
-        <div class="col-xs-8 col-md-4 col-xs-offset-2 col-md-offset-4 login-box">
-            <div class="">
+        <div class="col-md-8 col-md-offset-2 login-box">
+            <div class="text-center">
                 <h3>Register</h3>
             </div>
             <div class="">&nbsp;</div>
             <div class="">
-                <!-- Login form -->
-                <form ng-submit="register.register()">
+                <form class="form-horizontal" role="form" ng-submit="register.register()">
                     <div class="form-group">
-                        <label class="sr-only" for="username">Username</label>
-                        <input type="text" class="form-control input-sm" id="username" placeholder="Username" ng-model="register.registerData.username">
+                        <label for="bookTitle" class="col-md-2 col-md-offset-1 control-label">Firstname</label>
+                        <div class="col-md-8">
+                            <input type="text" ng-model="register.registerData.firstname" class="form-control" id="bookTitle" placeholder="...">
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label class="sr-only" for="password">Password</label>
-                        <input type="password" class="form-control input-sm" id="password" placeholder="Password" ng-model="register.registerData.password">
+                        <label for="bookTitle" class="col-md-2 col-md-offset-1 control-label">Lastname</label>
+                        <div class="col-md-8">
+                            <input type="text" ng-model="register.registerData.lastname" class="form-control" id="bookTitle" placeholder="...">
+                        </div>
                     </div>
-                    <button type="submit" class="btn btn-default btn-sm">Register</button>
+                    <div class="form-group">
+                        <label for="bookTitle" class="col-md-2 col-md-offset-1 control-label">Username</label>
+                        <div class="col-md-8">
+                            <input type="text" ng-model="register.registerData.username" class="form-control" id="bookTitle" placeholder="...">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="bookTitle" class="col-md-2 col-md-offset-1 control-label">Password</label>
+                        <div class="col-md-8">
+                            <input type="password" ng-model="register.registerData.password" class="form-control" id="bookTitle" placeholder="...">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-md-1">
+                            <button class="btn btn-default" type="submit">Register</button>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
