--- a/.tmp/concat/styles/main.css
+++ b/.tmp/concat/styles/main.css
@@ -155,8 +155,9 @@ footer .form-group {
 
 .book-listing {
     margin-top: 0.2%;
-    min-height: 420px;
+    min-height: 400px;
     height: 100%;
+    min-width: 200px;
     background: #fff !important;
     border-radius: 3px;
     border-color: #f5f5f5;
@@ -226,4 +227,8 @@ footer .form-group {
     pointer-events: none;
     cursor: default;
     color: #7e8b9b;
+}
+
+.row {
+    text-align: center;
 }
