server side auth + admin login + all users + read books modal

--- a/public/src/styles/style.css
+++ b/public/src/styles/style.css
@@ -201,8 +201,7 @@ footer .form-group {
 }
 
 .summary {
-    margin-top: -20px;
-    padding: 10px;
+    padding: 10px 50px 10px 10px;
     font-family: monospace;
     color: #777;
     font-size: 15px;
