--- a/public/src/templates/viewBook.html
+++ b/public/src/templates/viewBook.html
@@ -25,7 +25,7 @@
                             <input ng-model="book.currentBook.year_published" type="text" class="form-control" id="bookPublished" placeholder="Year Published" disabled>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" ng-show="book.isAuthenticated">
                         <div class="col-md-offset-2 col-md-3">
                             <button class="btn btn-default" ng-click="book.setAsFavorite()">Set as Favorite</button>
                         </div>
