--- a/public/src/templates/profile.html
+++ b/public/src/templates/profile.html
@@ -17,7 +17,7 @@
                 </h5>
             </div>
         </div>
-        <div class="col-md-7 login-box">
+        <div class="col-md-7 login-box" style="margin-top: 5%;">
             <div class="text-center">
                 <h3>Update Profile</h3>
             </div>
