--- a/public/src/templates/users.html
+++ b/public/src/templates/users.html
@@ -15,7 +15,7 @@
 
         <h4 style="margin-top:19px;">{{user.firstname}} {{user.lastname}} <small class="">({{user.username}})</small></h4>
 
-        <a href="#">View user profile</a>
+        <span class="badge" style="background-color: #3289c8;">{{users.getBadge(user.total_minutes_read)}}</span>
     </div>
 </div>
 <center style="margin-top: 20px;">
