--- a/public/src/templates/viewBook.html
+++ b/public/src/templates/viewBook.html
@@ -37,14 +37,15 @@
 </div>
 
 <!-- Favorie Book Success Modal -->
-<div class="modal fade" id="FavoriteBookSuccessModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div ng-show="book.message" class="modal fade" id="FavoriteBookSuccessModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header" style="padding: 30px;">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h5 class="modal-title">Book with title "{{book.currentBook.title}}" was added to Favorites.</h5><br/>
+                <br/>
+                <h5 class="modal-title">{{book.message}}</h5><br/>
                 <button type="button" class="btn btn-primary btn-sm" data-dismiss="modal" ng-click="book.goToFavorites()">Go to Favorites</button>
-                <button type="button" class="btn btn-default btn-sm" data-dismiss="modal" ui-sref="app">Close</button>
+                <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
