--- a/public/src/templates/login.html
+++ b/public/src/templates/login.html
@@ -17,7 +17,7 @@
                         <label class="sr-only" for="password">Password</label>
                         <input type="password" class="form-control input-sm" id="password" placeholder="Password" ng-model="login.loginData.password">
                     </div>
-                    <button type="submit" class="btn btn-default btn-sm">Sign in</button>
+                    <button type="submit" class="btn btn-default btn-sm pull-right">Sign in</button>
                 </form>
             </div>
         </div>
