--- a/public/src/templates/editBook.html
+++ b/public/src/templates/editBook.html
@@ -1,6 +1,11 @@
 <div class="container margin_60">
     <div class="row">
-        <div class="col-md-8 col-md-offset-2 login-box">
+        <div class="col-md-4 login-box" style="margin-right: 5%;">
+            <div class="">
+                <img ng-src="{{bookEditor.currentBook.image || bookEditor.thumbnail}}" height="250px" title="{{bookEditor.currentBook.title}} Cover" />
+            </div>
+        </div>
+        <div class="col-md-7 login-box" style="margin-top: 5%;">
             <div class="text-center">
                 <h3>Edit Book</h3>
             </div>
@@ -26,7 +31,13 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-offset-2 col-md-4">
+                        <label for="bookCover" class="col-md-1 col-md-offset-1 control-label">Book Cover</label>
+                        <div class="col-md-8">
+                            <input ng-model="bookEditor.currentBook.image" type="text" class="form-control" id="bookPublished" placeholder="Book Cover">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-1 col-md-6">
                             <button class="btn btn-default" data-toggle="modal" data-target="#SaveBookSuccessModal" ng-click="bookEditor.saveBook()">Save</button>
                             <button class="btn btn-default" data-toggle="modal" data-target="#FavoriteBookSuccessModal" ng-click="bookEditor.setAsFavorite()">Set as Favorite</button>
                         </div>
