--- a/public/src/templates/profile.html
+++ b/public/src/templates/profile.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-4 login-box" style="margin-right: 5%; min-height: 451px;">
             <div class="text-center">
-                <img width="200px" src="http://images.iimg.in/c/569f4771c45d324bda8b4660-4-501-0-1453279096/google/user-icon-png-pnglogocom.img?crop=1" />
+                <img height="200px" ng-src="{{profile.currentUser.image || profile.defaultImg}}" />
                 <h3>{{profile.currentUser.firstname}} {{profile.currentUser.lastname}}</h3><span class="badge" style="background-color: #3289c8;">{{profile.getBadge(profile.currentUser.total_minutes_read)}}</span><br/><br/>
             </div>
             <div class="">
@@ -46,6 +46,12 @@
                         <label for="bookAuthor" class="col-md-3 col-md-offset-1 control-label">Weekly Reading Goal</label>
                         <div class="col-sm-6">
                             <input type="number" ng-model="profile.currentUser.weekly_reading_goal" class="form-control" id="bookAuthor">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="bookAuthor" class="col-md-3 col-md-offset-1 control-label">Profile Image</label>
+                        <div class="col-sm-6">
+                            <input type="text" ng-model="profile.currentUser.image" class="form-control" id="bookAuthor">
                         </div>
                     </div>
                     <div class="form-group">
